# CopyFile

./: .gitignore  CMakeLists.txt  CopyFile.sln  conanfile.txt  regenerate_and_build.sh
CopyFile/: CMakeLists.txt  CopyFile.cpp  CopyFile.vcxproj
CopyFileLib/: App.cpp  App.h  CMakeLists.txt  Chunk.h  Constants.h  CopyFileLib.cpp  CopyFileLib.vcxproj  CopyFileLib.vcxproj.filters  Exceptions.h  FileInfo.h  FileUtils.cpp  FileUtils.h  InputFile.cpp  InputFile.h  MessageListenerInterface.h  Messanger.cpp  Messanger.h  Messenger.cpp  Messenger.h  OutputFile.cpp  OutputFile.h  ReadThread.cpp  ReadThread.h  Reader.cpp  Reader.h  Router.cpp  Router.h  SharedMemory.cpp  SharedMemory.h  SharedMemoryBuffer.h  TestClass.cpp  TestClass.h  ThreadsafeQueue.h  WriteFile.cpp  WriteFile.h  Writer.cpp  Writer.h  anonymous_semaphore_shared_data.h
CopyOverNetwork/: CMakeLists.txt  Client.cpp  Client.h  CopyFileOverNetwork.cpp  NetworkApp.cpp  NetworkApp.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h
GoogleTests/: CMakeLists.txt  GoogleTests.vcxproj  main.cpp  test.cpp
Server/: Server.cpp  Server.vcxproj
docs/: creating_packages.md  debug_with_conan.md  deployment_with_conan.md  shared_memory.md
scripts/: check_blocks.py  deploy.sh  run_default_test.py  run_shared_memory_test.py  run_test.py  test_functions.py
